sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:20: error: not found: value getNombreValeur
   if (getNombreValeur()==10){
       ^